feat: Completed the structure of the initial site div

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google 1998</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <center>
+        <figure>
+          <img src="assets/google.jpg" alt="" />
+        </figure>
+        <div class="bg-gray vw-80">
+          <p>Search the web using Google!</p>
+          <input type="text" name="q" value="" size="40" />
+          <br />
+          <button type="submit">Google Search</button>
+          <button type="submit" name="sa">I'm feeling lucky</button>
+        </div>
+      </center>
+    </main>
+  </body>
 </html>
