--- a/index.html
+++ b/index.html
@@ -12,14 +12,47 @@
         <figure>
           <img src="assets/google.jpg" alt="" />
         </figure>
-        <div class="bg-gray vw-80">
+        <div class="bg-gray vw-80 wh-6">
           <p>Search the web using Google!</p>
           <input type="text" name="q" value="" size="40" />
           <br />
           <button type="submit">Google Search</button>
           <button type="submit" name="sa">I'm feeling lucky</button>
         </div>
+
+        <div class="container vw-80 wh-8">
+          <div>
+            Special Searches
+            <br />
+            <a href="">Stanford Search</a>
+            <br />
+            <a href="">Linux Search</a>
+          </div>
+
+          <div>
+            <a href="help.html">Help!</a> <br />
+            <a href="about.html">About Google!</a> <br />
+            <a href="company.html">Company Info</a> <br />
+            <a href="stickers.html">Google! Logos</a> <br />
+          </div>
+
+          <div>
+            Get Google! <br />
+            updates monthly: <br />
+            <input type="hidden" name="listname" value="google-friends" />
+            <input type="text" name="emailaddr" value="your e-mail" /> <br />
+            <button type="submit" name="SubmitAction">Subscribe</button
+            ><a
+              href="https://web.archive.org/web/19981202230410/http://www.findmail.com/list/google-friends/"
+              >Archive</a
+            >
+          </div>
+        </div>
       </center>
     </main>
+    <br />
+    <footer>
+      <p>Copyright ©1998 Google Inc.</p>
+    </footer>
   </body>
 </html>
