docs: Added final comments and completed the project

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Document Metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google 1998</title>
+    <!-- External Stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <center>
+        <!-- Google Logo -->
         <figure>
-          <img src="assets/google.jpg" alt="" />
+          <img src="assets/google.jpg" alt="Google Logo" />
         </figure>
+        <!-- Search Box and Buttons -->
         <div class="bg-gray vw-80 wh-6">
           <p>Search the web using Google!</p>
           <input type="text" name="q" value="" size="40" />
@@ -19,7 +23,7 @@
           <button type="submit">Google Search</button>
           <button type="submit" name="sa">I'm feeling lucky</button>
         </div>
-
+        <!-- Container with Links -->
         <div class="container vw-80 wh-8">
           <div>
             Special Searches
@@ -28,14 +32,12 @@
             <br />
             <a href="">Linux Search</a>
           </div>
-
           <div>
             <a href="help.html">Help!</a> <br />
             <a href="about.html">About Google!</a> <br />
             <a href="company.html">Company Info</a> <br />
             <a href="stickers.html">Google! Logos</a> <br />
           </div>
-
           <div>
             Get Google! <br />
             updates monthly: <br />
@@ -51,6 +53,7 @@
       </center>
     </main>
     <br />
+    <!-- Copyright Footer -->
     <footer>
       <p>Copyright ©1998 Google Inc.</p>
     </footer>
